feat: add styles

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Rock Paper Scissors</title>
     </head>
     <body>
         <div id="container">
-            <h1>Rock Paper Scissors<h1>
+            <h1>Rock Paper Scissors</h1>
             <div id="scores">
-                <div id="player">
+                <div class="score-tile" id="player">
                     <div id="player-name">Player</div>
                     <div>:</div>
                     <div id="player-score">0</div>
                 </div>
-                <div id="bot">
+                <div class="score-tile" id="bot">
                     <div id="bot-name">Bot</div>
                     <div>:</div>
                     <div id="bot-score">0</div>
@@ -26,7 +27,7 @@
                 <button>Scissor</button>
             </div>
             <div id="bot-play">
-                <div>Bot : <div>
+                <div>Bot : </div>
                 <div id="bot-play-option"></div>
             </div>
         </div>
