feat: add game logic

--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
             </div>
             <div id="bot-play">
                 <div>Bot : </div>
-                <div id="bot-play-option"></div>
+                <div id="bot-play-choice"></div>
+            </div>
+            <div id="turns">
+                <div>Current Turn: </div>
+                <div id="turns-count">1</div>
+                <div> of 5</div>
             </div>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
